# Telemetry.Client.Udp

./: CMakeLists.txt  CMakePresets.json
docs/: Architecture.md
public/PiSubmarine/Telemetry/Client/Udp/: Client.h  Source.h
src/: CMakeLists.txt
src/PiSubmarine/Telemetry/Client/Udp/: Client.cpp  Source.cpp
test/: CMakeLists.txt
test/PiSubmarine/Telemetry/Client/Udp/: ClientTest.cpp
